--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,6 +53,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/safety.png
+    - assets/images/tracking.png
+    - assets/images/digital.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
