--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    ext.kotlin_version = '1.9.0' // Specify the Kotlin version
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.1.0" // Adjust to your AGP version
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -6,11 +18,18 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(":app")
+
+    // Ensure all subprojects use the correct Kotlin version
+    afterEvaluate {
+        if (project.plugins.hasPlugin("kotlin-android") || project.plugins.hasPlugin("kotlin")) {
+            project.dependencies {
+                implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+            }
+        }
+    }
 }
 
 tasks.register("clean", Delete) {
