--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.0
+  font_awesome_flutter: ^10.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,9 +56,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/images/safety.png
-    - assets/images/tracking.png
-    - assets/images/digital.png
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
