--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   font_awesome_flutter: ^10.3.0
+  another_flushbar: ^1.10.24
 
 
   # The following adds the Cupertino Icons font to your application.
