--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   provider: ^6.0.0
   font_awesome_flutter: ^10.3.0
   another_flushbar: ^1.10.24
+  url_launcher: ^6.0.17
+  maps_launcher: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
