--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   provider: ^6.0.0
   font_awesome_flutter: ^10.3.0
   another_flushbar: ^1.10.24
+  zego_uikit_prebuilt_call: ^4.15.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
