--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   another_flushbar: ^1.10.24
   zego_uikit_prebuilt_call: ^4.15.4
-
+  url_launcher: ^6.0.20
 
 
   # The following adds the Cupertino Icons font to your application.
