--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   another_flushbar: ^1.10.24
   zego_uikit_prebuilt_call: ^4.15.4
   url_launcher: ^6.0.20
+  google_maps_flutter: ^2.1.4
+  http: ^1.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
