--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   url_launcher: ^6.0.20
   google_maps_flutter: ^2.1.4
   http: ^1.2.2
+  sensors_plus: ^2.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
