--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
   provider: ^6.0.0
   font_awesome_flutter: ^10.3.0
   another_flushbar: ^1.10.24
-  zego_uikit_prebuilt_call: ^4.15.4
   url_launcher: ^6.0.20
   google_maps_flutter: ^2.1.4
   http: ^1.2.2
   sensors_plus: ^2.0.0
 
-
+  zego_uikit_prebuilt_call: ^4.15.4
+  audioplayers: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,6 +64,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/audio/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
