--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,18 @@ dependencies:
   google_maps_flutter: ^2.1.4
   http: ^1.2.2
   sensors_plus: ^2.0.0
-
+  camera: ^0.9.4+5
+  path_provider: ^2.0.11
   zego_uikit_prebuilt_call: ^4.15.4
   audioplayers: ^6.1.0
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   geolocator: ^13.0.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
