--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,15 @@ dependencies:
   url_launcher: ^6.0.20
   google_maps_flutter: ^2.1.4
   http: ^1.2.2
-  sensors_plus: ^2.0.0
+  sensors_plus: ^2.0.2
   camera: ^0.9.4+5
   path_provider: ^2.0.11
   zego_uikit_prebuilt_call: ^4.15.4
   audioplayers: ^6.1.0
+  shake: ^1.0.1
+  flutter_foreground_task: ^8.6.0
+  vibration: ^1.7.4
+  flutter_phone_direct_caller: ^2.1.1
 
 
 
