--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,54 +2,85 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <!-- Reason for requiring camera access -->
     <key>NSCameraUsageDescription</key>
-    <string>We need camera access to detect spy cameras.</string>
-    <key>NSCameraUsageDescription</key>
-    <string>We require camera access to connect to a call</string>
+    <string>This app requires camera access to detect spy cameras and to connect to a call.</string>
+
+    <!-- Reason for requiring microphone access -->
     <key>NSMicrophoneUsageDescription</key>
-    <string>We require microphone access to connect to a call</string>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>CFBundleDisplayName</key>
-	<string>Saahasini</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>saahasini</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
+    <string>This app requires microphone access to connect to a call.</string>
+
+    <!-- Development language of the app -->
+    <key>CFBundleDevelopmentRegion</key>
+    <string>en</string> <!-- Assuming English is the default language -->
+
+    <!-- Display name of the app on the home screen -->
+    <key>CFBundleDisplayName</key>
+    <string>Saahasini</string>
+
+    <!-- Executable file name, usually no need to change -->
+    <key>CFBundleExecutable</key>
+    <string>$(EXECUTABLE_NAME)</string>
+
+    <!-- Unique identifier for the app -->
+    <key>CFBundleIdentifier</key>
+    <string>com.example.saahasini</string> <!-- Replace with your actual bundle identifier -->
+
+    <!-- Info.plist version -->
+    <key>CFBundleInfoDictionaryVersion</key>
+    <string>6.0</string>
+
+    <!-- Name of the bundle (your app) -->
+    <key>CFBundleName</key>
+    <string>Saahasini</string>
+
+    <!-- Package type -->
+    <key>CFBundlePackageType</key>
+    <string>APPL</string>
+
+    <!-- Version number of the app -->
+    <key>CFBundleShortVersionString</key>
+    <string>1.0.0</string> <!-- Replace with your actual version number -->
+
+    <!-- Build number of the app -->
+    <key>CFBundleVersion</key>
+    <string>1</string> <!-- Replace with your actual build number -->
+
+    <!-- Specifies that the app requires iPhone OS -->
+    <key>LSRequiresIPhoneOS</key>
+    <true/>
+
+    <!-- Launch screen storyboard -->
+    <key>UILaunchStoryboardName</key>
+    <string>LaunchScreen</string>
+
+    <!-- Main storyboard file -->
+    <key>UIMainStoryboardFile</key>
+    <string>Main</string>
+
+    <!-- Supported orientations for iPhone -->
+    <key>UISupportedInterfaceOrientations</key>
+    <array>
+        <string>UIInterfaceOrientationPortrait</string>
+        <string>UIInterfaceOrientationLandscapeLeft</string>
+        <string>UIInterfaceOrientationLandscapeRight</string>
+    </array>
+
+    <!-- Supported orientations for iPad -->
+    <key>UISupportedInterfaceOrientations~ipad</key>
+    <array>
+        <string>UIInterfaceOrientationPortrait</string>
+        <string>UIInterfaceOrientationPortraitUpsideDown</string>
+        <string>UIInterfaceOrientationLandscapeLeft</string>
+        <string>UIInterfaceOrientationLandscapeRight</string>
+    </array>
+
+    <!-- Allow more control over frame rates (optional, depending on app needs) -->
+    <key>CADisableMinimumFrameDurationOnPhone</key>
+    <true/>
+
+    <!-- Supports indirect input events -->
+    <key>UIApplicationSupportsIndirectInputEvents</key>
+    <true/>
 </dict>
 </plist>
